--- a/firstfidle.html
+++ b/firstfidle.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,13 +9,18 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!--main css-->
     <link rel="stylesheet" href="css/firstfiddle.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
+
 <body>
     <div class="container">
         <h2 class="a">Welcome to <b style="color: orange;">FIRST FIDDLE</b></h2><br>
         <div class="row">
             <div class="col-md-7">
-                <p class="b">First Fiddle Restaurants, one of India's most prominent F&B companies in the casual dining sector, is headed by Priyank Sukhija. Starting the journey from Lazeez Affair in 1999 to Miso Sexy and Bougie in 2022, we have created wave after wave in the industry with over 30+ restaurants, brands, and franchises across India.
+                <p class="b">First Fiddle Restaurants, one of India's most prominent F&B companies in the casual dining
+                    sector, is headed by Priyank Sukhija. Starting the journey from Lazeez Affair in 1999 to Miso Sexy
+                    and Bougie in 2022, we have created wave after wave in the industry with over 30+ restaurants,
+                    brands, and franchises across India.
 
                 </p>
                 <center>
@@ -22,26 +28,29 @@
                 </center>
             </div><!--col md 7-->
             <div class="col-md-5">
-                <img src="https://pn-paul.netlify.app/image/first.jpg" alt="" class="w-365px h-395px">
+                <img src="https://pn-paul.netlify.app/image/first.jpg" alt="" class="img123">
             </div>
         </div><!--row-->
-      
+
     </div><!--container-->
     <br><br><br>
     <div class="container-fluid back">
         <div class="row">
             <div class="col-md-2"></div><!--col md 2-->
-            <div class="col-md-8 text-white aos-init aos-animation" style="padding-top: 140px;" data-aos="zoom-out-down" data-aos-delay="400" data-aos-duration="2000">
-              <h1 class="text-center h1">MEDIA MENTIOS</h1>
-              <p style="line-height: 40px;
+            <div class="col-md-8 text-white aos-init aos-animation" style="padding-top: 140px;" data-aos="zoom-out-down"
+                data-aos-delay="400" data-aos-duration="2000">
+                <h1 class="text-center h1">MEDIA MENTIOS</h1>
+                <p style="line-height: 40px;
               letter-spacing: 1px;
               word-spacing: 1px;
               padding-right: 5px;
               margin-top: 10px;
-              text-align: center;">We've been making splashes and headlines since 1999 for our innovative concepts and aesthetic ideations, experimental gastronomic affairs, and exotic mixology. We’ve made our way from the heart of the country into the hearts of its people!</p>
-              <center>
-                <button class="btn btn-warning btn-lg mt-5" style="margin-bottom: 2cm;">Know more</button>
-              </center>
+              text-align: center;">We've been making splashes and headlines since 1999 for our innovative concepts and
+                    aesthetic ideations, experimental gastronomic affairs, and exotic mixology. We’ve made our way from
+                    the heart of the country into the hearts of its people!</p>
+                <center>
+                    <button class="btn btn-warning btn-lg mt-5" style="margin-bottom: 2cm;">Know more</button>
+                </center>
             </div><!--col md 8-->
             <div class="col-md-"></div><!--col md 2-->
         </div><!--row-->
@@ -51,26 +60,112 @@
         <h1 class="text-center ex">EXPLORE <b style="color: orange;">OUR BRANDS</b></h1>
         <div class="row">
             <div class="col-md-3">
-                <div class="card shadow mt-4 aos-init aos-animate" data-aos="fade-right" data-aos-duration="100000" data-aos-delay="200" >
+                <div class="card shadow mt-4 aos-init aos-animate" data-aos="fade-right" data-aos-duration="100000"
+                    data-aos-delay="200">
                     <img src="https://pn-paul.netlify.app/image/ffpic1.jpg" alt="">
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card shadow mt-4 aos-init aos-animate" data-aos="fade-up" data-aos-duration="10000" data-aos-delay="400" >
+                <div class="card shadow mt-4 aos-init aos-animate" data-aos="fade-up" data-aos-duration="10000"
+                    data-aos-delay="400">
                     <img src="https://pn-paul.netlify.app/image/ffpic2.jpg" alt="">
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card shadow mt-4 aos-init aos-animate" data-aos="fade-down" data-aos-duration="8000" data-aos-delay="600" >
+                <div class="card shadow mt-4 aos-init aos-animate" data-aos="fade-down" data-aos-duration="8000"
+                    data-aos-delay="600">
                     <img src="https://pn-paul.netlify.app/image/ffpic3.jpg" alt="">
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card shadow mt-4 aos-init aos-animate" data-aos="fade-up"  data-aos-delay="800" >
+                <div class="card shadow mt-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="800">
                     <img src="https://pn-paul.netlify.app/image/ffpic4.jpg" alt="">
                 </div>
             </div>
         </div><!--row-->
     </div><!--container-->
+    <br><br><br>
+    <div class="container-fluid pp">
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8 text-white aos-init" style="padding-top: 140px;" data-aos="fade-up"
+                data-aos-anchor-placement="bottom-bottom" data-aos-delay="200" data-aos-duration="1000">
+                <h1 class="text-center ll">EXPERIENCE OUR CONCEPTS</h1>
+                <p style=" line-height: 40px;
+            letter-spacing: 1px;
+            word-spacing: 1px;
+            padding-right: 5px;
+            margin-top: 10px;
+            text-align: center;">Moving beyond just offering Indian, international, and fusion cuisines, our
+                    restaurants create magic with our special events, mood-setting music, Insta-worthy aesthetics, and
+                    tongue-tingling signatures! Head over to experience it for yourself!</p>
+                <center>
+                    <button class="btn btn-warning btn-lg mt-4" style="margin-bottom: 2cm;">know more</button>
+                </center>
+            </div>
+            <div class="col-md-2"></div>
+        </div><!--row-->
+    </div><!--CONTAINER-->
+    <div class="container-fluid">
+        <div class="row" style="background-color: #111215;">
+            <div class="col-md-1"></div>
+
+            <div class="col-md-3" style="width: 27%;
+            margin-top: 2cm;">
+                <img src="https://pn-paul.netlify.app/image/ff-logo-02.png" alt="">
+            </div>
+
+            <div class="col-md-1"></div>
+
+            <div class="col-md-6">
+                <h1 class="ppp text-light mt-4">
+                    <span style="color: orange;">CONTACT</span>
+                    <span>US</span>
+                </h1>
+                <p style="line-height: 30px;
+                word-spacing: 1px;
+                font-size: 18px;
+                color: aliceblue;">We're a team focusing on redefining the way the hospitality industry works by
+                    bringing in concept based restaurants across India. We are truly committed to catering to the
+                    ever-changing cosmopolitan taste of the customer and revolutioning the F & B industry!</p>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h6 class="ppp" style="color: orange;">Address</h6>
+                        <p class="text-light">S-357 2nd floor, Block S, Panchsheel Park South, Panchsheel Park, New
+                            Delhi, Delhi 110017</p>
+                    </div>
+                    <div class="col-md-6">
+                        <h6 class="ppp" style="color: orange;">Enquiry</h6>
+                        <p class="text-light" style="margin-bottom: 3cm;">
+                            Email : <b style="color: orange;
+                            font-weight: 400 ;">customercare@firstfiddle.in</b>
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                      <a href="#"><i class='bx bxl-facebook-circle' style="color: orange; font-size: 40px;"></i></a>
+                      <a href=""><i class='bx bxl-instagram' style="color: orange; font-size: 40px;" ></i></a>
+                      <a href=""><i class='bx bxl-whatsapp' style="color: orange; font-size: 40px;" ></i></a>
+                    </div>
+                 </div>><!--row-->
+                 <br><br>
+            </div>
+        </div><!--row-->
+    </div><!--container-->
+     <div class="container-fluid" style="background-color: black;">
+        <div class="row">
+            <div class="col-md-3"></div>
+            <div class="col-md-6 text-light">
+                <p class="mt-2" style="font-weight: 250;">
+                    
+EMPLOYEE POLICIES |PRIVACY POLICY |TERMS AND CONDITIONS | BLOG | APP
+<b style="font-weight: 250;margin-left: 2.5cm;" class="foot">COPYRIGHT © 2021 FIRST FIDDLE F&B PRIVATE LIMITED</b>
+                </p>
+            </div>
+        </div><!--row-->
+     </div><!--container fluid-->
+
 </body>
+
 </html>
