work on firstfiddle and pn infosys

--- a/firstfidle.html
+++ b/firstfidle.html
@@ -112,7 +112,8 @@
 
             <div class="col-md-3" style="width: 27%;
             margin-top: 2cm;">
-                <img src="https://pn-paul.netlify.app/image/ff-logo-02.png" alt="">
+                <img src="https://pn-paul.netlify.app/image/ff-logo-02.png" alt="" style="    width: 249px;
+    height: 249px;">
             </div>
 
             <div class="col-md-1"></div>
@@ -130,12 +131,12 @@
                     ever-changing cosmopolitan taste of the customer and revolutioning the F & B industry!</p>
                 <div class="row">
                     <div class="col-md-6">
-                        <h6 class="ppp" style="color: orange;">Address</h6>
+                        <h6 class="ppp" style="color: orange;">ADDRESS</h6>
                         <p class="text-light">S-357 2nd floor, Block S, Panchsheel Park South, Panchsheel Park, New
                             Delhi, Delhi 110017</p>
                     </div>
                     <div class="col-md-6">
-                        <h6 class="ppp" style="color: orange;">Enquiry</h6>
+                        <h6 class="ppp" style="color: orange;">ENQUIRY</h6>
                         <p class="text-light" style="margin-bottom: 3cm;">
                             Email : <b style="color: orange;
                             font-weight: 400 ;">customercare@firstfiddle.in</b>
