navbar of firstfiddle

--- a/firstfidle.html
+++ b/firstfidle.html
@@ -13,6 +13,50 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+        <div class="container-fluid">
+            <a href="" class="navbar-brand">
+                <img src="https://pn-paul.netlify.app/image/ff-logo-02.png" alt="" class="weblogo">
+            </a>
+
+            <!--mobile view-->
+            <button class="navbar-toggler" data-bs-target="#aa" data-bs-toggle="collapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+
+            <div class="navbar-collapse collapse navbar" id="aa">
+                <ul class="navbar-nav ms-auto text-end hover">
+                    <li>
+                        <a href="" class="nav-link">Home</a>
+                    </li>
+                    <li>
+                        <a href="" class="nav-link">About</a>
+                    </li>
+                    <li>
+                        <a href="" class="nav-link">Brand</a>
+                    </li>
+                    <li>
+                        <a href="" class="nav-link">OUR Team</a>
+                    </li>
+                    <li>
+                        <a href="" class="nav-link">Press Release</a>
+                    </li>
+                    <li>
+                        <a href="" class="nav-link">Contact</a>
+                    </li>
+                    <li>
+                        <a href="" class="nav-link">Carresrs</a>
+                    </li>
+                    <li>
+                        <a href="" class="nav-link" style="border: 1px solid orangered;
+                        width: 94px;
+                        text-align: center;">Francise</a>
+                    </li>
+                </ul>
+            </div>
+        </div><!--container fluid-->
+    </nav>
     <div class="container">
         <h2 class="a">Welcome to <b style="color: orange;">FIRST FIDDLE</b></h2><br>
         <div class="row">
@@ -24,7 +68,8 @@
 
                 </p>
                 <center>
-                    <button class="btn btn-warning btn-lg mt-5 mb-3 text-light w-100px h-50px">JOIN THE JOURNEY</button>
+                    <button class="btn btn-warning btn-lg mt-5 mb-3 text-light w-100px h-50px Q">JOIN THE
+                        JOURNEY</button>
                 </center>
             </div><!--col md 7-->
             <div class="col-md-5">
@@ -37,8 +82,7 @@
     <div class="container-fluid back">
         <div class="row">
             <div class="col-md-2"></div><!--col md 2-->
-            <div class="col-md-8 text-white aos-init aos-animation" style="padding-top: 140px;" data-aos="zoom-out-down"
-                data-aos-delay="400" data-aos-duration="2000">
+            <div class="col-md-8 text-white " style="padding-top: 140px;">
                 <h1 class="text-center h1">MEDIA MENTIOS</h1>
                 <p style="line-height: 40px;
               letter-spacing: 1px;
@@ -49,7 +93,7 @@
                     aesthetic ideations, experimental gastronomic affairs, and exotic mixology. We’ve made our way from
                     the heart of the country into the hearts of its people!</p>
                 <center>
-                    <button class="btn btn-warning btn-lg mt-5" style="margin-bottom: 2cm;">Know more</button>
+                    <button class="btn btn-warning btn-lg mt-5 Q" style="margin-bottom: 2cm;">Know more</button>
                 </center>
             </div><!--col md 8-->
             <div class="col-md-"></div><!--col md 2-->
@@ -60,25 +104,22 @@
         <h1 class="text-center ex">EXPLORE <b style="color: orange;">OUR BRANDS</b></h1>
         <div class="row">
             <div class="col-md-3">
-                <div class="card shadow mt-4 aos-init aos-animate" data-aos="fade-right" data-aos-duration="100000"
-                    data-aos-delay="200">
+                <div class="card shadow mt-4 ">
                     <img src="https://pn-paul.netlify.app/image/ffpic1.jpg" alt="">
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card shadow mt-4 aos-init aos-animate" data-aos="fade-up" data-aos-duration="10000"
-                    data-aos-delay="400">
+                <div class="card shadow mt-4 ">
                     <img src="https://pn-paul.netlify.app/image/ffpic2.jpg" alt="">
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card shadow mt-4 aos-init aos-animate" data-aos="fade-down" data-aos-duration="8000"
-                    data-aos-delay="600">
+                <div class="card shadow mt-4 ">
                     <img src="https://pn-paul.netlify.app/image/ffpic3.jpg" alt="">
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="card shadow mt-4 aos-init aos-animate" data-aos="fade-up" data-aos-delay="800">
+                <div class="card shadow mt-4 ">
                     <img src="https://pn-paul.netlify.app/image/ffpic4.jpg" alt="">
                 </div>
             </div>
@@ -88,8 +129,7 @@
     <div class="container-fluid pp">
         <div class="row">
             <div class="col-md-2"></div>
-            <div class="col-md-8 text-white aos-init" style="padding-top: 140px;" data-aos="fade-up"
-                data-aos-anchor-placement="bottom-bottom" data-aos-delay="200" data-aos-duration="1000">
+            <div class="col-md-8 text-white aos-init" style="padding-top: 140px;">
                 <h1 class="text-center ll">EXPERIENCE OUR CONCEPTS</h1>
                 <p style=" line-height: 40px;
             letter-spacing: 1px;
@@ -100,7 +140,7 @@
                     restaurants create magic with our special events, mood-setting music, Insta-worthy aesthetics, and
                     tongue-tingling signatures! Head over to experience it for yourself!</p>
                 <center>
-                    <button class="btn btn-warning btn-lg mt-4" style="margin-bottom: 2cm;">know more</button>
+                    <button class="btn btn-warning btn-lg mt-4 Q" style="margin-bottom: 2cm;">know more</button>
                 </center>
             </div>
             <div class="col-md-2"></div>
@@ -145,27 +185,28 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                      <a href="#"><i class='bx bxl-facebook-circle' style="color: orange; font-size: 40px;"></i></a>
-                      <a href=""><i class='bx bxl-instagram' style="color: orange; font-size: 40px;" ></i></a>
-                      <a href=""><i class='bx bxl-whatsapp' style="color: orange; font-size: 40px;" ></i></a>
+                        <a href="#"><i class='bx bxl-facebook-circle' style="color: orange; font-size: 40px;"></i></a>
+                        <a href=""><i class='bx bxl-instagram' style="color: orange; font-size: 40px;"></i></a>
+                        <a href=""><i class='bx bxl-whatsapp' style="color: orange; font-size: 40px;"></i></a>
                     </div>
-                 </div>><!--row-->
-                 <br><br>
+                </div>><!--row-->
+                <br><br>
             </div>
         </div><!--row-->
     </div><!--container-->
-     <div class="container-fluid" style="background-color: black;">
+    <div class="container-fluid" style="background-color: black;">
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6 text-light">
                 <p class="mt-2" style="font-weight: 250;">
-                    
-EMPLOYEE POLICIES |PRIVACY POLICY |TERMS AND CONDITIONS | BLOG | APP
-<b style="font-weight: 250;margin-left: 2.5cm;" class="foot">COPYRIGHT © 2021 FIRST FIDDLE F&B PRIVATE LIMITED</b>
+
+                    EMPLOYEE POLICIES |PRIVACY POLICY |TERMS AND CONDITIONS | BLOG | APP
+                    <b style="font-weight: 250;margin-left: 2.5cm;" class="foot">COPYRIGHT © 2021 FIRST FIDDLE F&B
+                        PRIVATE LIMITED</b>
                 </p>
             </div>
         </div><!--row-->
-     </div><!--container fluid-->
+    </div><!--container fluid-->
 
 </body>
 
